third_party/move/move-compiler-v2/tests/bytecode-generator/loop_invalid.exp
// -- Model dump before first bytecode pipeline
module 0x42::loop_invalid {
    private fun misplaced_break(x: u64): u64 {
        loop {
          if Gt<u64>(x, 0) {
            break
          } else {
            break
          }
        };
        break;
        x
    }
    private fun misplaced_continue(x: u64): u64 {
        continue;
        loop {
          if Gt<u64>(x, 0) {
            continue
          } else {
            break
          }
        };
        x
    }
} // end 0x42::loop_invalid

// -- Sourcified model before first bytecode pipeline
module 0x42::loop_invalid {
    fun misplaced_break(x: u64): u64 {
        while (x > 0) break;
        break;
        x
    }
    fun misplaced_continue(x: u64): u64 {
        continue;
        while (x > 0) continue;
        x
    }
}


Diagnostics:
error: missing enclosing loop statement
  ┌─ tests/bytecode-generator/loop_invalid.move:7:9
  │
7 │         break;
  │         ^^^^^

error: missing enclosing loop statement
   ┌─ tests/bytecode-generator/loop_invalid.move:12:9
   │
12 │         continue;
   │         ^^^^^^^^
